--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
         Приєднуйся до
         мережі пекарень
       </h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2540.1412831001103!2d30.491044605469813!3d50.45709373012264!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1766670151527!5m2!1sru!2sua"
+        width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <footer>
@@ -186,7 +190,7 @@
         </li>
       </ul>
       <a href="#" target="_blank">Політика конфіденційності</a>
-      <p>© 2022 Дані захищені</p>
+      <p>&copy; 2022 Дані захищені</p>
     </address>
   </footer>
 </body>
