--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
   <header>
     <nav>
-      <a href="#">
+      <a href="/">
         <img src="./img/logo.svg" alt="Магазин Випічки">
       </a>
       <ul>
-        <li><a href="#">Франшиза</a></li>
-        <li><a href="#">Шеф-кухарі</a></li>
-        <li><a href="#">Формати</a></li>
-        <li><a href="#">Контакти</a></li>
+        <li><a href="#traditions-section">Наші традиції</a></li>
+        <li><a href="#chefs-section">Шеф-кухарі</a></li>
+        <li><a href="#formats-section">Формати</a></li>
+        <li><a href="#contacts-section">Контакти</a></li>
       </ul>
     </nav>
     <button type="button">Замовити дзвінок</button>
@@ -28,7 +28,7 @@
         Сучасна пекарня
       </h1>
     </section>
-    <section>
+    <section id="traditions-section">
       <ul>
         <li>Великий попит на ринку</li>
         <li>Доступні за бюджетом формати</li>
@@ -38,7 +38,7 @@
         Новий формат традицій
       </h2>
       <p>
-        <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та
+        <span lang="en">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та
         натуральність інгредієнтів.
       </p>
       <p>
@@ -49,7 +49,7 @@
       </p>
       <img src="./img/baker-man.jpg" alt="Чоловік випикає хліб з посмішкою">
     </section>
-    <section>
+    <section id="chefs-section">
       <h2>
         Наші найкращі
         шеф -кухарі
@@ -93,7 +93,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section id="formats-section">
       <h2>
         Формати
       </h2>
@@ -121,27 +121,27 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section id="contacts-section">
       <h2>
         Приєднуйся до
         мережі пекарень
       </h2>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2540.1412831001103!2d30.491044605469813!3d50.45709373012264!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1766670151527!5m2!1sru!2sua"
-        width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+        width="603" height="595" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <footer>
     <nav>
-      <a href="#">
+      <a href="/">
         <img src="./img/logo.svg" alt="Магазин Випічки">
       </a>
       <ul>
-        <li><a href="#">Франшиза</a></li>
-        <li><a href="#">Шеф-кухарі</a></li>
-        <li><a href="#">Формати</a></li>
-        <li><a href="#">Контакти</a></li>
+        <li><a href="#traditions-section">Наші традиції</a></li>
+        <li><a href="#chefs-section">Шеф-кухарі</a></li>
+        <li><a href="#formats-section">Формати</a></li>
+        <li><a href="#contacts-section">Контакти</a></li>
       </ul>
     </nav>
     <address>
