Add style.css and css variables

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сучасна пекарня</title>
+
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -14,27 +16,27 @@
         <img src="./img/logo.svg" alt="Магазин Випічки">
       </a>
       <ul>
-        <li><a href="#traditions-section">Наші традиції</a></li>
-        <li><a href="#chefs-section">Шеф-кухарі</a></li>
-        <li><a href="#formats-section">Формати</a></li>
-        <li><a href="#contacts-section">Контакти</a></li>
+        <li><a href="#traditions-section" class="nav-links">Наші традиції</a></li>
+        <li><a href="#chefs-section" class="nav-links">Шеф-кухарі</a></li>
+        <li><a href="#formats-section" class="nav-links">Формати</a></li>
+        <li><a href="#contacts-section" class="nav-links">Контакти</a></li>
       </ul>
     </nav>
-    <button type="button">Замовити дзвінок</button>
+    <button class="btn-primary">Замовити дзвінок</button>
   </header>
   <main>
     <section>
-      <h1>
-        Сучасна пекарня
+      <h1 class="hero-title">
+        <span class="accent">Сучасна</span> пекарня
       </h1>
     </section>
     <section id="traditions-section">
-      <ul>
+      <ul class="advantages-ul">
         <li>Великий попит на ринку</li>
         <li>Доступні за бюджетом формати</li>
         <li>Досвідчена управлінська команда</li>
       </ul>
-      <h2>
+      <h2 class="section-title">
         Новий формат традицій
       </h2>
       <p>
@@ -50,9 +52,9 @@
       <img src="./img/baker-man.jpg" alt="Чоловік випикає хліб з посмішкою">
     </section>
     <section id="chefs-section">
-      <h2>
+      <h2 class="section-title">
         Наші найкращі
-        шеф -кухарі
+        <span class="accent">шеф-кухарі</span>
       </h2>
       <ul>
         <li>
@@ -94,7 +96,7 @@
       </ul>
     </section>
     <section id="formats-section">
-      <h2>
+      <h2 class="section-title">
         Формати
       </h2>
       <ul>
@@ -122,7 +124,7 @@
       </ul>
     </section>
     <section id="contacts-section">
-      <h2>
+      <h2 class="section-title">
         Приєднуйся до
         мережі пекарень
       </h2>
