--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сучасна пекарня</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -39,13 +41,13 @@
       <h2 class="section-title">
         Новий формат традицій
       </h2>
-      <p>
-        <span lang="en">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та
+      <p class="traditions-text">
+        <span class="brand uppercase" lang="en">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та
         натуральність інгредієнтів.
       </p>
-      <p>
+      <p class="traditions-text">
         Ми працюємо як найвідоміші мережі—
-        <span>5 хвилин і замовлення готове</span>.
+        <span class="brand">5 хвилин і замовлення готове</span>.
         А ще у наших пекарень стильний дизайн
         та висока якість обслуговування!
       </p>
