--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <div class="container">
-      <nav>
-        <a href="/">
-          <img src="./img/logo.svg" alt="Магазин Випічки">
-        </a>
-        <ul>
-          <li><a href="#traditions-section" class="nav-links">Наші традиції</a></li>
-          <li><a href="#chefs-section" class="nav-links">Шеф-кухарі</a></li>
-          <li><a href="#formats-section" class="nav-links">Формати</a></li>
-          <li><a href="#contacts-section" class="nav-links">Контакти</a></li>
-        </ul>
-      </nav>
-      <button class="btn-primary">Замовити дзвінок</button>
+      <div class="header-container">
+        <nav class="header-nav">
+          <a href="/">
+            <img src="./img/logo.svg" alt="Магазин Випічки">
+          </a>
+          <ul class="header-menu">
+            <li class="header-item"><a href="#traditions-section" class="nav-links">Наші традиції</a></li>
+            <li class="header-item"><a href="#chefs-section" class="nav-links">Шеф-кухарі</a></li>
+            <li class="header-item"><a href="#formats-section" class="nav-links">Формати</a></li>
+            <li class="header-item"><a href="#contacts-section" class="nav-links">Контакти</a></li>
+          </ul>
+        </nav>
+        <button class="btn-primary">Замовити дзвінок</button>
+      </div>
     </div>
   </header>
   <main>
@@ -33,7 +35,7 @@
         </h1>
       </div>
     </section>
-    <section>
+    <section class="advantages-section">
       <div class="container">
         <h2 class="visually-hidden">Нащі переваги</h2>
         <ul class="advantages-ul">
@@ -45,19 +47,25 @@
     </section>
     <section class="traditions-section section" id="traditions-section">
       <div class="container">
-        <h2 class="traditions-title section-title">Новий формат традицій</h2>
-        <p class="traditions-text">
-          <span class="brand uppercase" lang="en">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак
-          традиційної випічки та
-          натуральність інгредієнтів.
-        </p>
-        <p class="traditions-text">
-          Ми працюємо як найвідоміші мережі—
-          <span class="brand">5 хвилин і замовлення готове</span>.
-          А ще у наших пекарень стильний дизайн
-          та висока якість обслуговування!
-        </p>
-        <img src="./img/baker-man.jpg" alt="Чоловік випикає хліб з посмішкою">
+        <div class="traditions-container">
+          <div class="traditions-content">
+            <h2 class="traditions-title section-title">Новий формат традицій</h2>
+            <p class="traditions-text">
+              <span class="brand uppercase" lang="en">shop bakery</span> — це пекарня, яка взяла все найкраще, і
+              зберегла
+              смак
+              традиційної випічки та
+              натуральність інгредієнтів.
+            </p>
+            <p class="traditions-text limited">
+              Ми працюємо як найвідоміші мережі —
+              <span class="brand">5 хвилин і замовлення готове</span>.
+              А ще у наших пекарень стильний дизайн
+              та висока якість обслуговування!
+            </p>
+          </div>
+          <img src="./img/baker-man.jpg" alt="Чоловік випикає хліб з посмішкою">
+        </div>
       </div>
     </section>
     <section class="section" id="chefs-section">
@@ -76,7 +84,8 @@
             <article>
               <h3 class="chef-title">Влад</h3>
               <p>Привіт, я Влад!</p>
-              <p>Мій кодитерський стаж вже 18 років.<span>shop bekery</span> - це наша любов, з якою ми ділимось кожен раз
+              <p>Мій кодитерський стаж вже 18 років.<span>shop bekery</span> - це наша любов, з якою ми ділимось кожен
+                раз
                 з Вами через нашу випічку!</p>
               <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
             </article>
@@ -87,9 +96,9 @@
     <section class="section" id="formats-section">
       <div class="container">
         <h2 class="formats-title section-title">Формати</h2>
-        <ul>
-          <li>
-            <article>
+        <ul class="formats-list">
+          <li class="formats-item">
+            <article class="format-card">
               <h3 class="format-title" lang="en">Walrus</h3>
               <div class="format-text">
                 <p>Площа: до 120 м2</p>
@@ -99,8 +108,8 @@
               </div>
             </article>
           </li>
-          <li>
-            <article>
+          <li class="formats-item">
+            <article class="format-card">
               <h3 class="format-title" lang="en">Horseshoe</h3>
               <div class="format-text">
                 <p>Площа: до 25 м2</p>
@@ -110,8 +119,8 @@
               </div>
             </article>
           </li>
-          <li>
-            <article>
+          <li class="formats-item">
+            <article class="format-card">
               <h3 class="format-title" lang="en">Handlebar</h3>
               <div class="format-text">
                 <p>Площа: до 15 м2</p>
